[metadata]
name = "frank"
version = "v0.0.5"
author = "Tim Palko"
author_email = "tim@palkosoftware.com"
description = "Database, dates and times"
readme = "README.md"
url = "https://github.com/tpalko/photo-binner"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNUv3 License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"

[options]
python_requires = ">=3.9"

[options.packages.find]
where = "src/frank"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
