[project]
name = "frank"
version = "v0.0.11"
authors = [
  { name="Tim Palko", email="tim@palkosoftware.com" },
]
description = "Database, dates and times"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = ['mariadb', 'pytz', 'packaging', 'simplejson']

[project.urls]
"Homepage" = "https://github.com/tpalko/frank-common"

[options]
python_requires = ">=3.11"

[options.packages.find]
where = "src/frank"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.flit.sdist]
include = ["src/frank/.cowpyrc"]

[tool.setuptools]
include-package-data = true 

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frank = [".cowpyrc"]
